Fixed typos; Added README/Thanks section

--- a/.docker/server.cfg
+++ b/.docker/server.cfg
@@ -1,4 +1,4 @@
-name: 'Alt:V Sample Server'
+name: 'alt:V Sample Server'
 description: 'The name says it all.'
 # website: example.com
 gamemode: Freeroam
